--- a/app/views/cars/rez.html.erb
+++ b/app/views/cars/rez.html.erb
@@ -4,17 +4,119 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  
+  <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.9/js/jquery.dataTables.js"></script>
   <link rel="stylesheet" href="/resources/demos/style.css">
   <script>
+    function SetDayPrice (event){
+             
+             var ptmp = $("#temp").val();
+             var summ = $("#doc_sum").val()/ptmp;
+             
+             $("#daycost").val(summ);	
+             
+        }    
+
+
+	function SetTotalPrice (event){
+            var chCode = ('charCode' in event) ? event.charCode : event.keyCode;
+            
+             $("#dni").val($("#temp").val());
+             var ptmp = $("#temp").val();
+             var summ = ptmp*$("#daycost").val();
+             
+             $("#doc_sum").val(summ);	
+             
+        }
+    
+
+     function GetChar (event){
+            var chCode = ('charCode' in event) ? event.charCode : event.keyCode;
+            
+             $("#dni").val($("#temp").val());
+             var dtmp = $("#dt").val();
+             var nd = dtmp[3] + dtmp[4] + "/" + dtmp[0] + dtmp[1] + "/" + dtmp[6] + dtmp[7] + dtmp[8] + dtmp[9];
+             var d = new Date(nd)
+             var dd = Number($("#temp").val());
+ 			 d.setDate( d.getDate() + dd)	
+         	 var mm = d.getMonth()+1;
+				mm = (mm<10?"0"+mm:mm);
+			 var days = d.getDate();
+				days = (days<10?"0"+days:days);	
+             $("#dt1").val(days);
+             $("#dt1").val($("#dt1").val() +"."+(mm));
+             $("#dt1").val($("#dt1").val() +"."+ (d.getFullYear()) );
+             SetDayPrice(event);
+        }
+        
+    
+    function GetEndDate (event){
+            var chCode = ('charCode' in event) ? event.charCode : event.keyCode;
+            
+             $("#dni").val($("#temp").val());
+             var dtmp1 = $("#dt").val();
+             var dtmp2 = $("#dt1").val();
+             var newdate = (Date(dtmp2) - Date(dtmp1))
+             $("#temp").val(Date(newdate))
+             
+             
+         var dtmp = $("#dt").val();
+         var nd = dtmp[3] + dtmp[4] + "/" + dtmp[0] + dtmp[1] + "/" + dtmp[6] + dtmp[7] + dtmp[8] + dtmp[9];
+         var dtmp1 = $("#dt1").val();
+         var nd1 = dtmp1[3] + dtmp1[4] + "/" + dtmp1[0] + dtmp1[1] + "/" + dtmp1[6] + dtmp1[7] + dtmp1[8] + dtmp1[9];
+         var start = new Date(nd);
+		 var end = new Date(nd1);
+ 		 var diff = new Date(end - start);
+		 var days = diff/1000/60/60/24;
+		 $("#temp").val(days)
+		SetDayPrice(event);
+        }
+  
+  
+    function myFunction(a,b) {
+    
+    var text = a;
+   
+    $("#cli_id").val(text);
+    $("#cli_info").val(b);
+}
+
+$(document).ready( function () {
+
+    $('#m2').dataTable( {
+    	 "order": [[ 1, "desc" ]]
+} );
+} );
+
+
+  
   $(function() {
-    $("#pan").toggle()
+    $("#pan1").toggle()
+    $("#pan2").toggle()
+   
     $("#clname").attr('disabled', 'disabled');
+    $("#clname").toggle()
+    $("#lclinf").toggle()
+    $("#cli_info").toggle()
   });
+  
+  $(function() {
+  $("#rem1").change( function() {
+    $("#pan1").toggle()
+     $("#lrem2").toggle()
+    $("#rem2").toggle()
+   // $("#clname").toggle()
+    $("#pser").toggle()
+  });
+  });
+  
   $(function() {
   $("#rem2").change( function() {
-    $("#pan").toggle()
-    $("#clname").toggle()
+    $("#pan2").toggle()
+    $("#lrem1").toggle()
+    $("#lclinf").toggle()
+     $("#cli_info").toggle()
+    $("#rem1").toggle()
+ //   $("#clname").toggle()
     $("#pser").toggle()
   });
   });
@@ -30,7 +132,7 @@ document.getElementById("#clname").disabled=true;
       dateFormat: 'dd.mm.yy' }).val();
        
     $( "#format" ).change(function() {
-      $( "#dt" ).datetimepicker( "option", "dateFormat", $( this ).val() );
+      $( "#dt" ).datepicker( "option", "dateFormat", $( this ).val() );
     });
   });
     $(function() {
@@ -71,8 +173,8 @@ document.getElementById("#clname").disabled=true;
 
 <%= button_to "Назад", root_path,:method => :get, :class=>"button tiny"%>
 <div class="row">
-  <div class="large-6 columns">
-  	<%= form_tag '/reznew' do %>
+  <div class="large-4 columns">
+  	<%= form_tag 'rezdoc.doc' do %>
   	  <div class="panel">
     
     <%
@@ -82,36 +184,91 @@ document.getElementById("#clname").disabled=true;
   	 	conmax = 0
   	 end		
   	%>
+  		<%= label_tag 'Номер №' %>
     	<%= text_field_tag 'cnum', conmax + 1 , :readonly => true%>
+    	
+    	<a><label id="lrem1" for="rem_lab"><%= check_box_tag 'active','1',false, :id => "rem1" %>
+    		Создать нового клиента </label></a>
+    		<a><label id="lrem2" for="rem_lab"><%= check_box_tag 'active','0',false, :id => "rem2"  %>
+    			Поиск клиента</label></a>
+    	<%= label_tag 'ФИО и дата рождения клиента',"", :id=>"lclinf"%> 
+    	<%= text_field_tag 'cli_info', "" , :readonly => true%>	 
     	<%=label_tag 'Имя клиента',"Серия паспорта", :id => "clname" %>
-    	<%= autocomplete_field_tag 'cur_name', params[:pseria], autocomplete_client_pseria_cars_path, :id_element => "#client_id",:id =>"pser", :size => 35 %>
-    	<%= hidden_field_tag :client_id  %>
+    	<!-- <%= autocomplete_field_tag 'cur_name', params[:pseria], autocomplete_client_pseria_cars_path, :id_element => "#client_id",:id =>"pser", :size => 35 %>
+    	
+    	<%= hidden_field_tag :client_id ,:id => "cli_id" %> -->
+    	<%= hidden_field_tag :cli_id ,:id => "cli_id" %>
     	<%= hidden_field_tag :flag,1  %>
     	<%= label_tag params[:sname] %>
-    	<%= label_tag 'Залог' %>
-    	<%= text_field_tag 'zalog'%>
+    	<%= label_tag 'Сумма договора' %>
+    	<%= text_field_tag 'doc_sum',"",:onkeyup =>"SetDayPrice (event);"%>
+    	<%= label_tag 'Цена в день' %>
+    	<input size="40" value="1" onkeyup="SetTotalPrice (event);" id="daycost" />
+    	<%= label_tag 'Гарантийная сумма' %>
+    	<%= text_field_tag 'garant_summ'%>
     	
     	<p>
-  <%= check_box_tag 'active','1',false, :id => "rem2"  %>
-  <label for="rem_lab">Создать нового клиента</label>
-  		
-</p>
-	
+  		</p>
+  	
     	<%= label_tag 'Номер автомобиля' %>
     	<%= select_tag "car_num", options_for_select(Car.all.collect {|p| [ p.marca + " "+p.gnum, p.id ] }) %>
     	<%= label_tag 'Дата начала договора' %>
-    	<%= text_field_tag 'nstdate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt"%>
-    	<%= label_tag 'Дата конца договора'%>
-    	<%= text_field_tag 'enddate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt1"%>
+    	<%= text_field_tag 'nstdate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt",:onchange =>"GetChar (event);"%>
+    	<%= label_tag 'Время начала договора' %>
+    	<%= text_field_tag 'sttime', Time.now.strftime('%R') %>
+    	<%= label_tag 'Кол-во дней' %>
+    	<input size="40" value="1" onkeyup="GetChar (event);" id="temp" />
+    	<!-- <%= text_field_tag 'dni',1  %> -->
+    	
+
+    <%= label_tag 'Дата окончания договора'%>
+    <%= text_field_tag 'enddate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt1",:onchange =>"GetEndDate (event);"%>
+    	<%= label_tag 'Время окончания договора'%>
+    	<%= text_field_tag 'endtime', Time.now.strftime('%R') %>
     	<%= label_tag 'Менеджер' %>
     	<%= text_field_tag 'user', current_user.username, :readonly => true%>
-	<center><%= submit_tag 'Сохранить',:class=>"button tiny" %>
+	<center><%= submit_tag 'Сохранить' %>
+		
 		</center>
-	
-  </div>
-  </div>
+		<%= link_to "ok", car_rez_path(:format => "doc") %>
+	</div>
+ </div>
+  
+  
+    <div class="large-7 columns">
+  	<div id="pan2" class="panel">
+  		
+ <table id="m2">
+  <thead>
+    <tr>
+      <th>№</th>
+      <th>Имя</th>
+      <th>Фамилия</th>
+      <th>Дата рождения</th> 
+      <th>Телефон</th>
+    </tr>
+  </thead>
+  <tbody>
+  	<% @clients = Client.all %>
+  	<% @clients.each do |co| %>
+  	<tr>
+  	<td><button tiny onclick="myFunction(<%= co.id %>,'<%= co.sname%> <%= co.name%> <%= co.dn%>')">
+  		<%= co.id %></button tiny></td>
+  	<td><%= co.name%></td>
+  	<td><%= co.sname%></td>
+  	<td><%= co.dn%></td>
+  	<td><%= co.tel%></td>
+  	</tr>
+  	
+  	<% end %>
+  
+  </tbody>
+</table>
+  	</div>
+  	</div>
+  
   <div class="large-6 columns">
-  	<div id="pan" class="panel">
+  	<div id="pan1" class="panel">
   		
   		<%= label_tag 'Фамилия' %>
     	<%= text_field_tag 'surname'%>
