--- a/app/views/cars/autotech.html.erb
+++ b/app/views/cars/autotech.html.erb
@@ -33,9 +33,9 @@ $(document).ready( function () {
 					<th>Автомобиль</th>
 					<th>Текущий пробег</th>
 					<th>Дата последнего ТО</th>
-					<th>Необходимость замены масла и фильтров</th>
-					<th>Стоимость обслуживания за текущий месяц</th>
-					<th>Стоимость обслуживания за текущий год</th>
+					<th>Необходимость замены<br> масла и фильтров</th>
+					<th>Стоимость обслуживания<br> за текущий месяц</th>
+					<th>Стоимость обслуживания<br> за текущий год</th>
 					<th>Действие</th>
 					
 				</tr>
