--- a/app/views/cars/rezdoc.doc.erb
+++ b/app/views/cars/rezdoc.doc.erb
@@ -817,12 +817,13 @@ style='mso-spacerun:yes'> </span><%= @client.tel %><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
 normal'><span lang=EN-US style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>Data de la  <%= @contract.order_date.strftime('%d.%m.%Y') %>  <o:p></o:p></span></p>
+mso-ansi-language:EN-US'>Data de la  <%= @contract.order_date.strftime('%d.%m.%Y') %> 
+pina la <%= @contract.diff %><o:p></o:p></span></p>
 
 
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
 normal'><span lang=EN-US style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>la <%= @contract.diff %><o:p>&nbsp;</o:p></span></p>
+mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:10.85pt;margin-bottom:
 0cm;margin-left:0cm;margin-bottom:.0001pt;line-height:normal'><span lang=EN-US
