--- a/app/views/cars/contractnew.html.erb
+++ b/app/views/cars/contractnew.html.erb
@@ -176,7 +176,7 @@ document.getElementById("#clname").disabled=true;
 <%= button_to "Назад", root_path,:method => :get, :class=>"button tiny"%>
 <div class="row">
   <div class="large-4 columns">
-  	<%= form_tag 'reznew.doc' do %>
+  	<%= form_tag 'contr.doc' do %>
   	  <div class="panel">
     
     <%
@@ -230,7 +230,7 @@ document.getElementById("#clname").disabled=true;
     	<%= text_field_tag 'endtime', Time.now.strftime('%R') %>
     	<%= label_tag 'Менеджер' %>
     	<%= text_field_tag 'user', current_user.username, :readonly => true%>
-	<center><%= submit_tag 'Сохранить',:class=>"button tiny" %>
+	<center><%= submit_tag 'Печать',:class=>"button tiny" %>
 		</center>
 	</div>
  </div>
