--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -31,7 +31,8 @@ $(document).ready( function () {
 <table id="mcl" border="0" cellspacing="5" cellpadding="5">
 		<thead>
 			<tr>
-			   <th>N0</th>
+			   <th>Действие</th>
+			   <th>Действие</th>
 			   <th>Фамилия</th>
 			   <th>Имя</th>
 			   <th>Дата рождения</th>
@@ -46,7 +47,8 @@ $(document).ready( function () {
 		<tbody>
 					<% @clients.each do |cl| %>
 					<tr>
-						<td><%= link_to cl.id,edit_client_path(cl) %></td>
+		<td><%= button_to "Изменить",edit_client_path(cl),:method => :get %></td>
+		<td><%= button_to "Контракт",edit_contract_path(cl),:method => :get %></td>
 						<th><%= cl.sname %></th>
 						<th><%= cl.name %></th>
 						<td><%= cl.bdate %></td>
