--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
 <div class="contain-to-grid sticky">
   <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
  <div class="row" >
-  <div class="small-2 large-4 columns">
+  
+  
+  <div class="small-4 large-4 columns">
   	<% if user_signed_in? %>
-  		<a style="color: "red">Пользователь : <%= current_user.name  %> <%= current_user.surname  %></a>
+  		<a style="color: "red">Текущий курс : <%= Cparam.last.curs  %>MDL за 1 USD</a>
   	<% end %>
   </div>
+  
   <div class="small-4 large-4 columns" >
   	<%
   			@day_week_ru = ""
@@ -37,7 +40,8 @@
   	%>
   	<a style="color: "red">Сегодня: <%= @day_week_ru%> <%= DateTime.now.strftime('%d.%m.%Y') %></a>
   </div>
-  <div class="small-6 large-4 columns">
+  
+  <div class="small-2 large-3 columns">
   	<% if user_signed_in? %>
   		<%= link_to 'Выход', destroy_user_session_path, :method => :delete%>
   	<% end %>
