--- a/app/views/cars/rez.html.erb
+++ b/app/views/cars/rez.html.erb
@@ -256,7 +256,7 @@ document.getElementById("#clname").disabled=true;
   	<% @clients.each do |co| %>
   	<tr>
   	<td><button tiny onclick="myFunction(<%= co.id %>,'<%= co.sname%> <%= co.name%> <%= co.dn%>')">
-  		<%= co.id %></button tiny></td>
+  		OK</button tiny></td>
   	<td><%= co.name%></td>
   	<td><%= co.sname%></td>
   	<td><%= co.dn%></td>
