--- a/app/views/cars/rezdoc.doc.erb
+++ b/app/views/cars/rezdoc.doc.erb
@@ -823,7 +823,7 @@ table.MsoTableGrid
   mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-size:12.0pt;font-family:"Times New Roman",serif;
-  mso-ansi-language:EN-US'>Data de <%= params[:nstdate] %> la <%=params[:enddate] %><o:p></o:p></span></p>
+  mso-ansi-language:EN-US'>Data de la <%= params[:nstdate] %> pana la <%=params[:enddate] %><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-size:12.0pt;font-family:"Times New Roman",serif;
   mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></p>
@@ -939,7 +939,7 @@ table.MsoTableGrid
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-size:12.0pt;font-family:"Times New Roman",serif;
   mso-ansi-language:EN-US'>Data<span style='mso-spacerun:yes'> 
-  </span>de <%= params[:nstdate] %> la <%=params[:enddate] %><o:p></o:p></span></p>
+  </span>de la <%= params[:nstdate] %> pana la <%=params[:enddate] %><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-size:12.0pt;font-family:"Times New Roman",serif;
   mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></p>
